--- a/angular-pubs/src/index.html
+++ b/angular-pubs/src/index.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <title>AngularPubs</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <div class="container text-center">
+    <app-root>Loading...</app-root>
+  </div>
 </body>
 </html>
