--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,15 @@
-this is the index
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>AngularPubs</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link href="styles.bundle.css" rel="stylesheet"/></head>
+<body>
+  <div class="container text-center">
+    <app-root>Loading...</app-root>
+  </div>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+</html>
